Remove claws-mail, Atril; add Zathura

--- a/src/xfce-desktop-pkgs.yaml
+++ b/src/xfce-desktop-pkgs.yaml
@@ -8,29 +8,10 @@ packages:
   - Thunar
   - adwaita-gtk2-theme
   - adwaita-icon-theme
-  - atril
   - blueberry
-  - catfish
-  - claws-mail
-  - claws-mail-plugins-archive
-  - claws-mail-plugins-att-remover
-  - claws-mail-plugins-attachwarner
-  - claws-mail-plugins-fetchinfo
-  - claws-mail-plugins-mailmbox
-  - claws-mail-plugins-newmail
-  - claws-mail-plugins-notification
-  - claws-mail-plugins-pgp
-  - claws-mail-plugins-rssyl
-  - claws-mail-plugins-smime
-  - claws-mail-plugins-spam-report
-  - claws-mail-plugins-tnef
-  - claws-mail-plugins-vcalendar
-  - desktop-backgrounds-compat
   - firefox
   - galculator
-  - geany
   - gnome-keyring-pam
-  - gparted
   - greybird-dark-theme
   - greybird-light-theme
   - greybird-xfce4-notifyd-theme
@@ -45,13 +26,11 @@ packages:
   - mousepad
   - network-manager-applet
   - nm-connection-editor
-  - pidgin
   - ristretto
   - seahorse
   - thunar-archive-plugin
   - thunar-media-tags-plugin
   - thunar-volman
-  - transmission
   - xarchiver
   - xdg-user-dirs-gtk
   - xfce4-about
@@ -73,3 +52,4 @@ packages:
   - xfdesktop
   - xfwm4
   - xfwm4-themes
+  - zathura
